--- a/index.html
+++ b/index.html
@@ -1,9 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Card Magic Tutorials</title>
+  <title>CardTrickCentral</title>
   </head>
-<body>
-  
+<body background="http://il5.picdn.net/shutterstock/videos/7223584/thumb/5.jpg">
+
 </body>
 </html>
