--- a/index.html
+++ b/index.html
@@ -3,7 +3,7 @@
 <head>
   <title>CardTrickCentral</title>
   </head>
-<body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
+<body background="http://cdn.wallpapersafari.com/41/96/Iq97zt.jpg">
 
 </body>
 </html>
