--- a/tutorials.html
+++ b/tutorials.html
@@ -1,11 +1,21 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <style>
+body
+    background='https://i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg'
+    background-repeat:no-repeat;
+-webkit-background-size:cover;
+-moz-background-size:cover;
+-o-background-size:cover;
+background-size:cover;
+background-position:center;
+  </style>
 <title>
 Card Trick Central-Tutorials
 </title>
 </head>
-<body background='https://i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg'>
+<body>>
 
 </body>
 </html>
