--- a/index.html
+++ b/index.html
@@ -4,6 +4,6 @@
   <title>CardTrickCentral</title>
   </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
-
+  <h3> This is Jackson and William's Card Magic Trick</h3>
 </body>
 </html>
