--- a/tutorials.html
+++ b/tutorials.html
@@ -2,15 +2,15 @@
 <html>
 <head>
   <style>
-body
-    background='https://i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg'
+body {
+    background-image = https://i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg;
     background-repeat:no-repeat;
 -webkit-background-size:cover;
 -moz-background-size:cover;
 -o-background-size:cover;
 background-size:cover;
 background-position:center;
-  </style>
+    } </style>
 <title>
 Card Trick Central-Tutorials
 </title>
