--- a/tutorials.html
+++ b/tutorials.html
@@ -3,7 +3,7 @@
 <head>
   <style>
 body {
-    background-image: url('i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg');
+    background-image: url('https://i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg');
     background-repeat:no-repeat;
 -webkit-background-size:cover;
 -moz-background-size:cover;
