--- a/tutorials.html
+++ b/tutorials.html
@@ -5,6 +5,7 @@
 body {
     background-image: url('https://i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg');
     background-repeat:no-repeat;
+  background-position: center;
 
     } </style>
 <title>
