--- a/tutorials.html
+++ b/tutorials.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <link rel="icon" type="image/png" href="favicon-32x32.png" sizes="32x32" />
+<link rel="icon" type="image/png" href="favicon-16x16.png" sizes="16x16" />
+
   <style>
 body {
     background-image: url('https://i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg');
