--- a/index.html
+++ b/index.html
@@ -7,12 +7,7 @@
   <title>CardTrickCentral</title>
   </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
-  <h3> This is Jackson and William's Card Magic Trick Site</h3>
-  <style>
-h3 {
-  color: white;
-  font-family: Impact;
-     
-  </style>
+<img src="ctc.png"/>
+
 </body>
 </html>
