--- a/index.html
+++ b/index.html
@@ -8,6 +8,11 @@
   </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
 <img src="ctc.png"/>
+ <style>
+   img {
+     margin: center;
+   }
+  </style>
 
 </body>
 </html>
