--- a/index.html
+++ b/index.html
@@ -7,12 +7,8 @@
   <title>CardTrickCentral</title>
   </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
-<img src="ctc.png"/>
- <style>
-   img {
-     margin: auto;
-   }
-  </style>
+  <center><img src="ctc.png"/></center>
+
 
 </body>
 </html>
