--- a/index.html
+++ b/index.html
@@ -9,6 +9,14 @@
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
   <center><img src="ctc.png"/></center>
   <p>Welcome to Card Trick Central. A site complete with tutorials for tricks and flourishes and we review cards.<p>
+  <style>
+        p {
+      color: red;
+      margin-top: 100px;
+      margin-left: 100px;
+      font-family: Arial;
+      }
+  </style>
 
 
 </body>
