--- a/tutorials.html
+++ b/tutorials.html
@@ -6,7 +6,7 @@
 
   <style>
 body {
-    background-image: url('https://i.ytimg.com/vi/EAN-PwRfJcA/maxresdefault.jpg');
+    background-image: url('http://clipart-library.com/clipart/gie5BrMeT.htm');
     background-repeat:no-repeat;
   background-position: center;
 
