--- a/tutorials.html
+++ b/tutorials.html
@@ -6,7 +6,7 @@
 
   <style>
 body {
-    background-image: url('http://clipart-library.com/clipart/gie5BrMeT.htm');
+    background-image: url('http://img.7te.org/images/640x480/magician-wallpaper-3d-card-magic-wal-100802.jpg');
     background-repeat:no-repeat;
   background-position: center;
 
