--- a/index.html
+++ b/index.html
@@ -8,14 +8,15 @@
   </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
   <center><img src="ctc.png"/></center>
-  <p>Welcome to Card Trick Central. A site complete with tutorials for tricks and flourishes and we review cards.<p>
+  <h3>Welcome to Card Trick Central.<h3>
+    <ul>
+      <li a href="tutoraials.html"/>Card Trick Tutorials</a></li>
   <style>
-        p {
+        h3 {
       color: red;
       margin-top: 100px;
       margin-left: 100px;
       font-family: Arial;
-      font-size: 34;
       }
   </style>
 
