--- a/index.html
+++ b/index.html
@@ -32,6 +32,9 @@
 .dropdown:hover .dropdown-content {
     display: block;
 }
+	  body {
+		  text-align: center;
+	  }
   </style>
 
  <div class="container">
