--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
      .dropdown-content {
     display: none;
     position: absolute;
-    background-color: #f9f9f9;
+    background-color: blue;
     min-width: 50px;
     box-shadow: 0px 8px 16px 0px rgba(0,0,0,0.2);
     padding: 12px 16px;
@@ -34,6 +34,9 @@
 }
 	  body {
 		  text-align: center;
+	  }
+	  a {
+		  color: red;
 	  }
   </style>
 
