--- a/index.html
+++ b/index.html
@@ -10,11 +10,13 @@
   <center><img src="ctc.png"/></center>
   <h3>Welcome to Card Trick Central.<h3>
   <style>
+	  
         h3 {
       color: red;
       margin-top: 140px;
       margin-left: 100px;
       font-family: Arial;
+      background-color: white;
       }
      .dropdown-content {
     display: none;
