--- a/index.html
+++ b/index.html
@@ -48,6 +48,8 @@
   <img src='https://cdn4.iconfinder.com/data/icons/flat-black/128/menu.png' >
   <div class="dropdown-content">
    <a href='tutorials.html'>Tutorials</a>
+	  <p></p>
+	  <a href='cardReview.html'>Magic Reviews</a>
 	
 	  
 	  
