--- a/tutorials.html
+++ b/tutorials.html
@@ -16,5 +16,25 @@ Card Trick Central-Tutorials
 </head>
 <body>
 <img src='cooltext227645740549350.png'>
+  <div style="float: left; width: 50%;">
+    <h2>Card Magic</h2>
+    <ul>
+<li>Left Item 1</li>
+<li>Left Item 2</li>
+<li>Left Item 3</li>
+<li>Left Item 4</li>
+<li>Left Item 5</li>
+</ul>
+</div>
+<div style="float: right; width: 50%;">
+  <h3>Coin Magic</h3>
+<ul>
+<li>Right Item 1</li>
+<li>Right Item 2</li>
+<li>Right Item 3</li>
+<li>Right Item 4</li>
+<li>Right Item 5</li>
+</ul>
+</div>
 </body>
 </html>
