--- a/tutorials.html
+++ b/tutorials.html
@@ -9,7 +9,11 @@ body {
     background-image: url('http://img.7te.org/images/640x480/magician-wallpaper-3d-card-magic-wal-100802.jpg');
  text-align:center;
 
-    } </style>
+    } 
+  li{
+  list-style-type: none;
+}
+  </style>
 <title>
 Card Trick Central-Tutorials
 </title>
