--- a/tutorials.html
+++ b/tutorials.html
@@ -7,9 +7,12 @@
   <style>
 body {
     background-image: url('http://img.7te.org/images/640x480/magician-wallpaper-3d-card-magic-wal-100802.jpg');
- text-align:center;
+ 
 
     } 
+    img {
+      margin: center;
+    }
   li{
   list-style-type: none;
 }
