--- a/tutorials.html
+++ b/tutorials.html
@@ -16,13 +16,19 @@ body {
   li{
   list-style-type: none;
 }
+    header {
+text-align: center;
+    }
   </style>
 <title>
 Card Trick Central-Tutorials
 </title>
 </head>
+  
 <body>
-<img src='cooltext227645740549350.png'>
+<header>
+  <img src='cooltext227645740549350.png'>
+  </header>
   <div style="float: left; width: 50%;">
     <h2>Card Magic</h2>
     <ul>
