--- a/tutorials.html
+++ b/tutorials.html
@@ -19,6 +19,10 @@ body {
     header {
 text-align: center;
     }
+    IMG.displayed {
+    display: block;
+    margin-left: auto;
+    margin-right: auto }
   </style>
 <title>
 Card Trick Central-Tutorials
@@ -26,9 +30,8 @@ Card Trick Central-Tutorials
 </head>
   
 <body>
-<header>
-  <img src='cooltext227645740549350.png'>
-  </header>
+<img src='cooltext227645740549350.png'>
+ 
   <div style="float: left; width: 50%;">
     <h2>Card Magic</h2>
     <ul>
