--- a/cardReview.html
+++ b/cardReview.html
@@ -6,7 +6,7 @@ CardReviews
 </title>
 </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
-  
+  <center><img src="camr.png"/></center>  
 
 
 
