--- a/tutorials.html
+++ b/tutorials.html
@@ -24,6 +24,8 @@ text-align: center;
     display: block;
     margin-left: auto;
     margin-right: auto }
+    h3: {
+      color: red;
   </style>
 <title>
 Card Trick Central-Tutorials
@@ -33,8 +35,8 @@ Card Trick Central-Tutorials
 <body>
 <img src='cooltext227645740549350.png'>
  
-  <div style="float: left; width: 50%;">
-    <h2>Card Magic</h2>
+  <div style="float: left; width: 50%; text-align: right">
+    <h3>Card Magic</h3>
     <ul>
 <li>Left Item 1</li>
 <li>Left Item 2</li>
@@ -43,7 +45,7 @@ Card Trick Central-Tutorials
 <li>Left Item 5</li>
 </ul>
 </div>
-<div style="float: right; width: 50%;">
+<div style="float: right; width: 50%; text-align:left;">
   <h3>Coin Magic</h3>
 <ul>
 <li>Right Item 1</li>
