--- a/tutorials.html
+++ b/tutorials.html
@@ -35,7 +35,7 @@ Card Trick Central-Tutorials
 <body>
 <img src='cooltext227645740549350.png'>
  
-  <div style="float: left; width: 50%; text-align: right">
+  <div style="float: left; width: 50%; text-align: left">
     <h3>Card Magic</h3>
     <ul>
 <li>Left Item 1</li>
@@ -45,7 +45,7 @@ Card Trick Central-Tutorials
 <li>Left Item 5</li>
 </ul>
 </div>
-<div style="float: right; width: 50%; text-align:left;">
+<div style="float: right; width: 50%; text-align:right;">
   <h3>Coin Magic</h3>
 <ul>
 <li>Right Item 1</li>
