--- a/tutorials.html
+++ b/tutorials.html
@@ -36,7 +36,7 @@ Card Trick Central-Tutorials
 <img src='cooltext227645740549350.png'>
  
   <div style="float: left; width: 50%; text-align: left">
-    <h3>Card Magic</h3>
+    <h3 style="color: red";>Card Magic</h3>
     <ul>
 <li>Left Item 1</li>
 <li>Left Item 2</li>
@@ -46,7 +46,7 @@ Card Trick Central-Tutorials
 </ul>
 </div>
 <div style="float: right; width: 50%; text-align:right;">
-  <h3>Coin Magic</h3>
+  <h3 style="color: red";>Coin Magic</h3>
 <ul>
 <li>Right Item 1</li>
 <li>Right Item 2</li>
