--- a/tutorials.html
+++ b/tutorials.html
@@ -35,7 +35,7 @@ Card Trick Central-Tutorials
 <body>
 <img src='cooltext227645740549350.png'>
  
-  <div style="float: left; width: 50%; text-align: left">
+  <div style="float: left; width: 50%; text-align: left; margin-top: 100px">
     <h3 style="color: red";>Card Magic</h3>
     <ul>
 <li>Left Item 1</li>
