--- a/cardReview.html
+++ b/cardReview.html
@@ -10,7 +10,9 @@ CardReviews
   <div class="pLC"/>
   <h2>Playing Card Reviews</h2>
   <ul>
-    <li><a href="a
+    <li><a href="absintheReview.html">Absinthe Cards By Ellusionist</a></li>
+  </ul>
+  </div>
   
     
 
