--- a/cardReview.html
+++ b/cardReview.html
@@ -7,7 +7,7 @@ CardReviews
 </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
   <center><img src="camr.png"/></center>
-  <div class="pLC"/>
+  <div class="pLC">
   <h2>Playing Card Reviews</h2>
   <ul>
     <li><a href="absintheReview.html">Absinthe Cards By Ellusionist</a></li>
