--- a/frenchdrop.html
+++ b/frenchdrop.html
@@ -9,11 +9,26 @@ body {
 text-align: center;
   background-image: url('https://images5.alphacoders.com/432/432139.jpg');
 }
+  li { /* styles all li elements*/
+    list-style-type: none;
+    color: red;
+}
   </style>
 </head>
 <body>
 <img src='cooltext228153175753303.png'>
   <p></p>
 <img src='https://pbs.twimg.com/media/B1gRB_JIcAAfFK0.jpg'>
+  <h2></h2>
+<p>
+ The french drop is an amazing coin disapearance. Lets learn how it works.
+  </p>
+  <ul>
+    <li>1. First hold the coin at the tip of your fingers. (Shown in diagram above)</li>
+    <li>2. Hover your hand over the coin like you're about to grab the coin.</li>
+    <li> 3. Drop the coin into your palm. Then close your top hand where the coin was.</li>
+    <li> 4. Bring your hands apart. Drop the coin into your pocket. </li>
+    <li>5. Open your empty hand, the coin has vanished!</li>
+  </ul>
 </body>
 </html>
