--- a/tutorials.html
+++ b/tutorials.html
@@ -1,8 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <link rel="icon" type="image/png" href="favicon-32x32.png"  />
-<link rel="icon" type="image/png" href="favicon-16x16.png"  />
+    <link rel="icon" type="image/png" href="favicon.ico"  />
 
   <style>
 body {
