--- a/absintheReview.html
+++ b/absintheReview.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <link rel="icon" type="image/png" href="favicon.ico"  />
 <title>Absinthe Review</title>
 </head>
 <body background ="https://playingcardcollector.files.wordpress.com/2014/11/absinth-playing-cards-back.jpg">
