--- a/frenchdrop.html
+++ b/frenchdrop.html
@@ -13,7 +13,12 @@ text-align: center;
   li { /* styles all li elements*/
     list-style-type: none;
     color: red;
+      background: white;
 }
+    p
+    {
+background: white;
+    }
   </style>
 </head>
 <body>
