--- a/absintheReview.html
+++ b/absintheReview.html
@@ -11,11 +11,15 @@ But, put aside handling and we have one of the most beautiful and unique deck of
 intricate and detailed and the front of the cards is just simply beautiful. Only complaint: Comes with an absinthe recipe card instead of double-backer.
 Get out and buy this fantastic deck of cards.
 </p>
+    <a href='http://www.ellusionist.com/absinthe-playing-cards-v2.html'> Buy Absinthe Cards Now!</a>
 <style>
 p {
 color:red;
 font-size: 50;
 }
+    a {
+color: green;
+    }
 </style>
 
 
