--- a/tutorials.html
+++ b/tutorials.html
@@ -37,7 +37,7 @@ Card Trick Central-Tutorials
   <div style="float: left; width: 50%; text-align: left; margin-top: 110px">
     <h3 style="color: red";>Card Magic</h3>
     <ul>
-<li>Left Item 1</li>
+<li><a href="cardSpring.html">Card Spring</a></li>
 <li>Left Item 2</li>
 <li>Left Item 3</li>
 <li>Left Item 4</li>
