--- a/cardSpring.html
+++ b/cardSpring.html
@@ -3,7 +3,7 @@
 <head>
 <title>Card Spring Tutorial</title>
 </head>
-<body background="https://i.ytimg.com/vi/U-GvSSBLVhg/hqdefault.jpg>
+<body background="https://i.ytimg.com/vi/U-GvSSBLVhg/hqdefault.jpg">
 
 
 
