--- a/keeperreview.html
+++ b/keeperreview.html
@@ -11,6 +11,9 @@ background: url('https://cdn.shopify.com/s/files/1/0200/7616/products/playing-ca
 </style>
 </head>
 <body>
-
+  <p></p>
+<img src='http://www.streetmagician.net/images/products/p_keepersplayingcards.jpg' >
+  <img src='http://www.themagicstreet.com/images/keepers-thumb.jpg' hight='443'> 
+  
 </body>
 </html>
