--- a/cardReview.html
+++ b/cardReview.html
@@ -11,6 +11,7 @@ CardReviews
   <h2 style="color: blue;">Playing Card Reviews</h2>
   <ul>
     <li><a href="absintheReview.html">Absinthe Cards By Ellusionist</a></li>
+    <li><a href='keeperreview.html'>Keeper Playing Cards By Ellusionist</a></li>
   </ul>
   </div>
   <style>
