--- a/keeperreview.html
+++ b/keeperreview.html
@@ -8,12 +8,15 @@ CardTrickCentral- Keeper Review
 body {
 background: url('https://cdn.shopify.com/s/files/1/0200/7616/products/playing-cards-keeper-1_medium.png?v=1474349750');
 }
+  a {
+color: green;
+  }
 </style>
 </head>
 <body>
-  <p></p>
-<img src='http://www.streetmagician.net/images/products/p_keepersplayingcards.jpg' >
-  <img src='http://www.themagicstreet.com/images/keepers-thumb.jpg' hight='443'> 
+  <p>Keeper playing cards are one of the smoothest and cheapest cards for magicians. They feel AMAZING. There are two different keeper decks avalible. One is red and one is blue. Now, this might not seem like much but the red ones are MARKED. They both have the same amazing quality and I would recomend both!</p>
+  <a href='http://www.ellusionist.com/red-keepers.html'>Buy Red Keepers!</a>
+  <a href='http://www.ellusionist.com/the-keeper-deck.html'>Buy Blue Keepers</a>
   
 </body>
 </html>
