--- a/keeperreview.html
+++ b/keeperreview.html
@@ -11,6 +11,9 @@ background: url('https://cdn.shopify.com/s/files/1/0200/7616/products/playing-ca
   a {
 color: green;
   }
+  p {
+background: light-blue;
+  }
 </style>
 </head>
 <body>
