--- a/keeperreview.html
+++ b/keeperreview.html
@@ -12,7 +12,7 @@ background: url('https://cdn.shopify.com/s/files/1/0200/7616/products/playing-ca
 color: green;
   }
   p {
-background: light-blue;
+background: #42cef4;
   }
 </style>
 </head>
