--- a/cardSpring.html
+++ b/cardSpring.html
@@ -4,7 +4,12 @@
 <title>Card Spring Tutorial</title>
 </head>
 <body background="https://i.ytimg.com/vi/U-GvSSBLVhg/hqdefault.jpg">
-
+<ol>
+  <li>Hold the cards in the top right corner with your middle finger. And hold the bottom left corner
+    with youyr thumb.</li>
+  <li>Apply pressure and benf=d the cards upwards.</li>
+  <li>Release the cards slowly and let them sporing into your hand.</li>
+  
 
 
 
