--- a/keeperreview.html
+++ b/keeperreview.html
@@ -19,7 +19,7 @@ background: #42cef4;
 </style>
 </head>
 <body>
-  <p>Keeper playing cards are one of the smoothest and cheapest cards for magicians. They feel AMAZING. There are two different keeper decks avalible. One is red and one is blue. Now, this might not seem like much but the red ones are MARKED. They both have the same amazing quality and I would recomend both!</p>
+  <p>Keeper playing cards are one of the smoothest and cheapest cards for magicians. They feel AMAZING. There are two different keeper decks avalible. One is red and one is blue. Now, this might not seem like much but the red ones are ******. They both have the same amazing quality and I would recomend both!</p>
   <a href='http://www.ellusionist.com/red-keepers.html'>Buy Red Keepers!</a>
   <p></p>
   <a href='http://www.ellusionist.com/the-keeper-deck.html'>Buy Blue Keepers</a>
