--- a/tutorials.html
+++ b/tutorials.html
@@ -32,6 +32,7 @@ Card Trick Central-Tutorials
 </head>
   
 <body>
+    <a href='index.html'>Home</a>
 <img src='cooltext227645740549350.png'>
  
   <div style="float: left; width: 50%; text-align: left; margin-top: 110px">
