--- a/cardSpring.html
+++ b/cardSpring.html
@@ -7,8 +7,14 @@
 <ol>
   <li>Hold the cards in the top right corner with your middle finger. And hold the bottom left corner
     with youyr thumb.</li>
-  <li>Apply pressure and benf=d the cards upwards.</li>
+  <li>Apply pressure downwards which bends the cards upwards.(Refer to image)</li>
   <li>Release the cards slowly and let them sporing into your hand.</li>
+  </ol>
+  <style>
+   li {
+     color:red;
+    }
+  </style>
   
 
 
