--- a/frenchdrop.html
+++ b/frenchdrop.html
@@ -22,6 +22,7 @@ background: white;
   </style>
 </head>
 <body>
+    <a href='index.html'>Home</a>
 <img src='cooltext228153175753303.png'>
   <p></p>
 <img src='https://pbs.twimg.com/media/B1gRB_JIcAAfFK0.jpg'>
