--- a/cardSpring.html
+++ b/cardSpring.html
@@ -4,16 +4,23 @@
 <title>Card Spring Tutorial</title>
 </head>
 <body background="https://i.ytimg.com/vi/U-GvSSBLVhg/hqdefault.jpg">
+  <a href="index.html">Home Page</a>
 <ol>
   <li>Hold the cards in the top right corner with your middle finger. And hold the bottom left corner
-    with youyr thumb.</li>
+    with your thumb.</li>
   <li>Apply pressure downwards which bends the cards upwards.(Refer to image)</li>
   <li>Release the cards slowly and let them sporing into your hand.</li>
   </ol>
   <style>
-   li {
+   ol {
      color:red;
+     margin-top: 200px;
+     margin-left: 300px;
     }
+    a {
+      margin: auto;
+    }
+    
   </style>
   
 
