--- a/cardSpring.html
+++ b/cardSpring.html
@@ -4,7 +4,7 @@
 <title>Card Spring Tutorial</title>
 </head>
 <body background="https://i.ytimg.com/vi/U-GvSSBLVhg/hqdefault.jpg">
-  <a href="index.html">Home Page</a>
+  <center><a href="index.html">Home Page</a></center>
 <ol>
   <li>Hold the cards in the top right corner with your middle finger. And hold the bottom left corner
     with your thumb.</li>
@@ -17,9 +17,7 @@
      margin-top: 200px;
      margin-left: 300px;
     }
-    a {
-      margin: auto;
-    }
+
     
   </style>
   
