--- a/index.html
+++ b/index.html
@@ -50,6 +50,8 @@
    <a href='tutorials.html'>Tutorials</a>
 	  <p></p>
 	  <a href='cardReview.html'>Magic Reviews</a>
+	  <p></p>
+	  <a href='about.html'>About</a>
 	
 	  
 	  
