--- a/cardSpring.html
+++ b/cardSpring.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
+   <link rel="icon" type="image/png" href="favicon.ico"  />
 <title>Card Spring Tutorial</title>
 </head>
 <body background="https://i.ytimg.com/vi/U-GvSSBLVhg/hqdefault.jpg">
