--- a/cardReview.html
+++ b/cardReview.html
@@ -15,6 +15,7 @@ CardReviews
   <ul>
     <li><a href="absintheReview.html">Absinthe Cards By Ellusionist</a></li>
     <li><a href='keeperreview.html'>Keeper Playing Cards By Ellusionist</a></li>
+     <li><a href='dreamreview.html'>Dream Act By Shin Lim</a></li>
   </ul>
   </div>
   <style>
