--- a/keeperreview.html
+++ b/keeperreview.html
@@ -25,6 +25,6 @@ background: #42cef4;
   <a href='http://www.ellusionist.com/red-keepers.html'>Buy Red Keepers!</a>
   <p></p>
   <a href='http://www.ellusionist.com/the-keeper-deck.html'>Buy Blue Keepers</a>
-  
+  <iframe width="560" height="315" src="https://www.youtube.com/embed/X9BQDb96X18" frameborder="0" allowfullscreen></iframe>
 </body>
 </html>
