--- a/cardReview.html
+++ b/cardReview.html
@@ -16,6 +16,7 @@ CardReviews
     <li><a href="absintheReview.html">Absinthe Cards By Ellusionist</a></li>
     <li><a href='keeperreview.html'>Keeper Playing Cards By Ellusionist</a></li>
      <li><a href='dreamreview.html'>Dream Act By Shin Lim</a></li>
+     <li><a href="bloodKingsV2.html">Bllod Kings V2</a></li>
   </ul>
   </div>
   <style>
