--- a/tutorials.html
+++ b/tutorials.html
@@ -33,7 +33,7 @@ Card Trick Central-Tutorials
   
 <body>
     <a href='index.html'>Home</a>
-<img src='cooltext227645740549350.png'>
+    <marquee behavior="scroll" direction="left"><img src='cooltext227645740549350.png'></marquee>
  
   <div style="float: left; width: 50%; text-align: left; margin-top: 110px">
     <h3 style="color: red";>Card Magic</h3>
