--- a/cardReview.html
+++ b/cardReview.html
@@ -9,7 +9,7 @@ CardReviews
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
   <center>
     <a href='index.html'>Home</a>
-    <img src="camr.png"/></center>
+     <marquee behavior="scroll" direction="right"> <img src="camr.png"/></marquee>
   <div class="pLC">
   <h2 style="color: blue;">Playing Card Reviews</h2>
   <ul>
