--- a/bloodKingsV2.html
+++ b/bloodKingsV2.html
@@ -1,4 +1,4 @@
-<! DOCTYPE html>
+<!DOCTYPE html>
 <html>
 <head>
 <title>Blood Kings V2 Review</title>
@@ -8,7 +8,7 @@
 THe blood kings V2 are amazing. The fee is amazing and the stock of the card is very thin and easy to handle. It feels amazing 
 and an added bonus: it comes with a ********* and a ****** ****** and comes ******* ** *********. Go and buy these cards here: <a href="http://www.ellusionist.com/blood-kings-2nd-edition-playing-cards.html"
 >Blood Kings V2</a>
-<iframe width="560" height="315" src="https://www.youtube.com/embed/WNut4swnXIo" frameborder="0" allowfullscreen></iframe>
+<iframe width="560" height="315" src="https://www.youtube.com/embed/WNut4swnXIo" frameborder="0" align="right"allowfullscreen></iframe>
 <style>
   iframe: margin-top: 475px;
   </style>
