--- a/about.html
+++ b/about.html
@@ -7,7 +7,7 @@ CardTrickCentral
 </title>
 </head>
 <body>
-<center> <a href='index.hmtl'>Home</a></center>
+<center> <a href='index.html'>Home</a></center>
 <h3>About William</h3>
 <p>William is a perfessional magician.</p>
 <a href='https://williammagic.weebly.com'>William's Site</a>
