--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
   </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
 	<marquee behavior="scroll" direction="left"><img src="ctc.png"/></marquee>
-  <h1>Welcome to Card Trick Central.<h1>
+  <h1>Welcome to Card Trick Central<h1>
   <style>
 	  
         h1 {
