--- a/frenchdrop.html
+++ b/frenchdrop.html
@@ -13,11 +13,11 @@ text-align: center;
   li { /* styles all li elements*/
     list-style-type: none;
     color: red;
-      background: white;
+   
 }
     p
     {
-background: white;
+color: blue;
     }
   </style>
 </head>
