--- a/tutorials.html
+++ b/tutorials.html
@@ -34,18 +34,13 @@ Card Trick Central-Tutorials
 <body>
     <a href='index.html'>Home</a>
     <marquee behavior="scroll" direction="left"><img src='cooltext227645740549350.png'></marquee>
- 
-  <div style="float: left; width: 50%; text-align: left; margin-top: 110px">
-    <h3 style="color: red";>Card Magic</h3>
-    <ul>
-<li><a href="cardSpring.html">Card Spring</a></li>
-
-</ul>
-</div>
-<div style="float: right; width: 50%; text-align:right;">
-  <h3 style="color: red";>Coin Magic</h3>
-<ul>
-  <li><a href='frenchdrop.html'>French Drop</a></li>
+<center><ul>
+    <li><h2>Coin Magic and Flourishes</h2></li>
+    <li><a href="frenchdrop.html">French Drop</a></li>
+    <li><h2>Card Magic and Flourishes</h2></li>
+    <li><a href="cardSpring">Card Spring</a></li>
+    </ul></center>
+    
 
 </ul>
 </div>
