--- a/tutorials.html
+++ b/tutorials.html
@@ -25,6 +25,12 @@ body {
     h3: {
       color: red;
     }
+      a {
+          color: white;
+      }
+      a:hover {
+          color: red;
+      }
   </style>
 <title>
 Card Trick Central-Tutorials
