--- a/absintheReview.html
+++ b/absintheReview.html
@@ -16,7 +16,7 @@ Get out and buy this fantastic deck of cards.
     <iframe width="560" height="315" src="https://www.youtube.com/embed/acte3Jpi8jw" frameborder="0" allowfullscreen></iframe>
 <style>
 p {
-color:red;
+color:white;
 font-size: 50;
 }
     a {
