--- a/index.html
+++ b/index.html
@@ -3,19 +3,7 @@
 <head>
   <link rel="icon" type="image/png" href="favicon.ico"  />
 
-
-  <title>CardTrickCentral</title>
-  </head>
-<body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
-  <div id="navigation">
-    <button type="button" id="about"><h5>About</h5></button>
-    <button type="button" id="tutorials"><h5>Tutorials</h5></button>
-    <button type="button" id="magicreviews"><h5>Magic Reviews</h5></button>
-    <button type="button" id="review"><h5>Review</h5></button>
-  </div>
-	<marquee behavior="scroll" direction="left"><img src="ctc.png"/></marquee>
-  <h1>Welcome to Card Trick Central<h1>
-    <script type="javascript">
+ <script>
 document.getElementById("about").addEventListener("click", function(event)
 {
   window.location.replace("cardtrickcentral.github.io/about.html");
@@ -33,6 +21,18 @@ document.getElementById("about").addEventListener("click", function(event)
   window.location.replace("https://docs.google.com/a/spyponders.com/forms/d/e/1FAIpQLSeOrZ4snZAV4cSl5EEVBlnRnJjbt3YcHhwZAV8Ifo5YTzeNTw/viewform?c=0&w=1");
 });
     </script>
+  <title>CardTrickCentral</title>
+  </head>
+<body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
+  <div id="navigation">
+    <button type="button" id="about"><h5>About</h5></button>
+    <button type="button" id="tutorials"><h5>Tutorials</h5></button>
+    <button type="button" id="magicreviews"><h5>Magic Reviews</h5></button>
+    <button type="button" id="review"><h5>Review</h5></button>
+  </div>
+	<marquee behavior="scroll" direction="left"><img src="ctc.png"/></marquee>
+  <h1>Welcome to Card Trick Central<h1>
+   
   <style>
 	  
         h1 {
