--- a/index.html
+++ b/index.html
@@ -3,30 +3,13 @@
 <head>
   <link rel="icon" type="image/png" href="favicon.ico"  />
 
- <script>
-document.getElementById("about").addEventListener("click", function(event)
-{
-  window.location.replace("cardtrickcentral.github.io/about.html");
-});
-      document.getElementById("tutorials").addEventListener("click", function(event)
-{
-  window.location.replace("cardtrickcentral.github.io/tutorials.html");
-});
-      document.getElementById("magicreviews").addEventListener("click", function(event)
-{
-  window.location.replace("cardtrickcentral.github.io/cardreview.html");
-});
-      document.getElementById("review").addEventListener("click", function(event)
-{
-  window.location.replace("https://docs.google.com/a/spyponders.com/forms/d/e/1FAIpQLSeOrZ4snZAV4cSl5EEVBlnRnJjbt3YcHhwZAV8Ifo5YTzeNTw/viewform?c=0&w=1");
-});
-    </script>
+
   <title>CardTrickCentral</title>
   </head>
 <body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
   <div id="navigation">
-    <button type="button" id="about"><h5>About</h5></button>
-    <button type="button" id="tutorials"><h5>Tutorials</h5></button>
+	  <a href='about.html'><button type="button" id="about"><h5>About</h5></button></a>
+	  <a href='tutorials.html'> <button type="button" id="tutorials"><h5>Tutorials</h5></button></a>
     <button type="button" id="magicreviews"><h5>Magic Reviews</h5></button>
     <button type="button" id="review"><h5>Review</h5></button>
   </div>
