--- a/index.html
+++ b/index.html
@@ -10,8 +10,8 @@
   <div id="navigation">
 	  <a href='about.html'><button type="button" id="about"><h5>About</h5></button></a>
 	  <a href='tutorials.html'> <button type="button" id="tutorials"><h5>Tutorials</h5></button></a>
-    <button type="button" id="magicreviews"><h5>Magic Reviews</h5></button>
-    <button type="button" id="review"><h5>Review</h5></button>
+    <a href='cardReviews.html'><button type="button" id="magicreviews"><h5>Magic Reviews</h5></button></a>
+    <a href='https://goo.gl/forms/ElqTtDh19Dx0Liv32'><button type="button" id="review"><h5>Review</h5></button></a>
   </div>
 	<marquee behavior="scroll" direction="left"><img src="ctc.png"/></marquee>
   <h1>Welcome to Card Trick Central<h1>
