--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <a href='https://goo.gl/forms/ElqTtDh19Dx0Liv32'><button type="button" id="review"><h5>Review</h5></button></a>
   </div>
 	<marquee behavior="scroll" direction="left"><img src="ctc.png"/></marquee>
-  <h1>Welcome to Card Trick Central<h1>
+  <h1>Welcome to Card Trick Central</h1>
    
   <style>
 	  
