--- a/index.html
+++ b/index.html
@@ -6,7 +6,7 @@
 
   <title>CardTrickCentral</title>
   </head>
-<body background="http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512">
+<header>
   <div id="navigation">
 	  <a href='about.html'><button type="button" id="about"><h5>About</h5></button></a>
 	  <a href='tutorials.html'> <button type="button" id="tutorials"><h5>Tutorials</h5></button></a>
@@ -14,6 +14,8 @@
     <a href='https://goo.gl/forms/ElqTtDh19Dx0Liv32'><button type="button" id="review"><h5>Review</h5></button></a>
   </div>
 	<marquee behavior="scroll" direction="left"><img src="ctc.png"/></marquee>
+	</header>
+	<body background='http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512'>
   <h1>Welcome to Card Trick Central</h1>
    
   <style>
