--- a/index.html
+++ b/index.html
@@ -30,10 +30,13 @@
     button {
       height: 50px;
       width: 70px;
+      color: #FF5500  ;
       
       
     }
-
+ button:hover {
+	 color:#CD5112  ;
+	  }
 	  body {
 		  text-align: center;
 	  }
