--- a/index.html
+++ b/index.html
@@ -31,11 +31,15 @@
       height: 50px;
       width: 70px;
       color: #FF5500  ;
+	    background-color: #3B45E8;
+	    border-radius: 50px;
       
       
     }
  button:hover {
 	 color:#CD5112  ;
+	 background-color:#3B45E8;
+	 border-radius: 50px;
 	  }
 	  body {
 		  text-align: center;
