--- a/index.html
+++ b/index.html
@@ -33,6 +33,7 @@
       color: #FF5500  ;
 	    background-color: #3B45E8;
 	    border-radius: 50px;
+	      margin: 13px 12px 12px 10px;
       
       
     }
