--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
       color: #FF5500  ;
 	    background-color: #3B45E8;
 	    border-radius: 50px;
-	      margin: 13px 12px 12px 10px;
-      
+	      margin: 25px 25px 25px 25px;
+      width:  30px;
       
     }
  button:hover {
