--- a/index.html
+++ b/index.html
@@ -35,6 +35,8 @@
 	    border-radius: 50px;
 	      margin: 25px 25px 25px 25px;
       width:  100px;
+	    font-size: 30px
+		    
       
     }
  button:hover {
