--- a/tutorials.html
+++ b/tutorials.html
@@ -5,7 +5,7 @@
 
   <style>
 body {
-    background-image: url('http://img.7te.org/images/640x480/magician-wallpaper-3d-card-magic-wal-100802.jpg');
+    background-image: url('http://wallpaperpulse.com/download/2012425-playing-cards-background');
  
 
     } 
