--- a/absintheReview.html
+++ b/absintheReview.html
@@ -2,6 +2,9 @@
 <html>
 <head>
     <link rel="icon" type="image/png" href="favicon.ico"  />
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
 <title>Absinthe Review</title>
 </head>
 <body background ="https://playingcardcollector.files.wordpress.com/2014/11/absinth-playing-cards-back.jpg">
