--- a/bloodKingsV2.html
+++ b/bloodKingsV2.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
 <title>Blood Kings V2 Review</title>
 </head>
 <body background='https://pbs.twimg.com/media/CiNBJcDUUAAwY2A.jpg'>
