--- a/cardSpring.html
+++ b/cardSpring.html
@@ -3,6 +3,9 @@
 <head>
    <link rel="icon" type="image/png" href="favicon.ico"  />
 <title>Card Spring Tutorial</title>
+   <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
 </head>
 <body background="https://i.ytimg.com/vi/U-GvSSBLVhg/hqdefault.jpg">
   <center><a href="index.html">Home Page</a></center>
