--- a/dreamreview.html
+++ b/dreamreview.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
 <title>Dream Act By Shin Lim</title>
 </head>
 <body background="https://static1.squarespace.com/static/56a58f63df40f3c82e8be1de/56c8d4f0a3360c4744f035ef/572ac7c4cf80a1c1b36adde6/1462423121565/56245-alt2-xl.png?format=500w">
