--- a/frenchdrop.html
+++ b/frenchdrop.html
@@ -5,6 +5,9 @@
 <title>
 CardTrickCentral-French Drop
 </title>
+    <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
 <style>
 body {
 text-align: center;
