--- a/keeperreview.html
+++ b/keeperreview.html
@@ -2,6 +2,9 @@
 <html>
 <head>
    <link rel="icon" type="image/png" href="favicon.ico"  />
+   <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
 <title>
 CardTrickCentral- Keeper Review
 </title>
