--- a/knightsReview.html
+++ b/knightsReview.html
@@ -2,6 +2,9 @@
 <html>
 <head>
 <title>Knights Review</title>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
   </head>
 <body>
   <iframe width="560" height="315" src="https://www.youtube.com/embed/3g2DzUs8AsU" frameborder="0" allowfullscreen></iframe>
