--- a/performances.html
+++ b/performances.html
@@ -1,6 +1,9 @@
 <!DOCTYPE html>
 <html>
 <head>
+  <meta name="apple-mobile-web-app-capable" content="yes" />
+<meta name="apple-mobile-web-app-status-bar-style"
+    content="black-translucent" />
 <title>Magic Performances</title>
   
   <link rel="icon" type="image/png" href="favicon.ico"  />
