--- a/cardSpring.html
+++ b/cardSpring.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="demo.appcache">
 <head>
    <link rel="icon" type="image/png" href="favicon.ico"  />
 <title>Card Spring Tutorial</title>
