--- a/dreamreview.html
+++ b/dreamreview.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html>
-<head>
+<head manifest="demo.appcache">
   <meta name="apple-mobile-web-app-capable" content="yes" />
 <meta name="apple-mobile-web-app-status-bar-style"
     content="black-translucent" />
