--- a/keeperreview.html
+++ b/keeperreview.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="demo.appcache">
 <head>
    <link rel="icon" type="image/png" href="favicon.ico"  />
    <meta name="apple-mobile-web-app-capable" content="yes" />
