--- a/knightsReview.html
+++ b/knightsReview.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html manifest="demo.appcache">
 <head>
 <title>Knights Review</title>
   <meta name="apple-mobile-web-app-capable" content="yes" />
