--- a/tutorials.html
+++ b/tutorials.html
@@ -8,7 +8,7 @@
 
   <style>
 body {
-    background-image: url('2012425-playing-cards-background');
+    background-image: url('2012425-playing-cards-background.jpg');
  
 
     } 
