--- a/index.html
+++ b/index.html
@@ -16,7 +16,7 @@
   </div>
 	<marquee behavior="scroll" direction="left"><img src="ctc.png"/></marquee>
 	</header>
-	<body background='http://cdn.shopify.com/s/files/1/0174/0638/products/4AcesAgain.jpg?v=1440199512'>
+	<body background='4AcesAgain.jpg'>
   <h1>Welcome to Card Trick Central</h1>
    
   <style>
